[tool.poetry]
name = "packaging-tutorial"
version = "0.2.2"
description = ""
authors = ["Rafael Miranda <rafaelpadovezi@gmail.com>"]
readme = "README.md"
packages = [{include = "packaging_tutorial"}]

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
